# Prototype

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  build.cmd  build_scripts.cmd  readme.md
PrototypeApplication/cmake/windows/: CMakeLists.txt
PrototypeApplication/src/: Application.cpp  Application.h  main.cpp
PrototypeCommon/assets/bundles/airtag/: scene.glb
PrototypeCommon/assets/bundles/cloth/: cloth.gltf
PrototypeCommon/assets/bundles/iphone/: scene.glb
PrototypeCommon/assets/bundles/stalingrad/: stalingrad.glb
PrototypeCommon/assets/scenes/: AirTags.json  Cloth.json  Demo.json  Empty.json  Game.json  Raytracing2.json  ResourcesSchema.json  Resources_Opengl.json  Resources_Vulkan.json  SceneSchema.json  Settings.json  Stalingrad.json  validation.py
PrototypeCommon/assets/shaders/opengl/brdf/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/color/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/default/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/deferred/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/depthMap/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/final/: vert.glsl
PrototypeCommon/assets/shaders/opengl/forward/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/fullscreen/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/hdr/: frag.glsl  vert.glsl
PrototypeCommon/assets/shaders/opengl/pbr/: frag.glsl  (+1 more)
PrototypeCommon/assets/textures/: graffiti.hdr
PrototypeCommon/cmake/windows/: CMakeLists.txt
PrototypeCommon/include/PrototypeCommon/: Algo.h  Bitflag.h  Definitions.h  IO.h  Logger.h  Maths.h  MemoryPool.h  Patches.h  Types.h
PrototypeCommon/src/: Bitflag.cpp  IO.cpp  Logger.cpp  Maths.cpp
PrototypeCompiler/: format.cmd  generate.cmd  setup.cmd  transpile.cmd
PrototypeCompiler/cmake/: CMakeCargo.cmake  CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake  CMakeTestRustCompiler.cmake  FindRust.cmake
PrototypeDependencies/: build.cmd  clean.cmd
PrototypeEngine/cmake/windows/: CMakelists.txt
PrototypeEngine/include/PrototypeEngine/: PrototypeEngineApi.h  PrototypeEngineApplication.h
PrototypeEngine/scripts/: compile_shaders.bat  export_prototype.py  fix_objecct_matrices.py  triangulate_scene.py
PrototypeEngine/src/bullet/: PrototypeBulletPhysics.cpp  PrototypeBulletPhysics.h
PrototypeEngine/src/core/: Prototype3DLineBuffer.h  PrototypeAR.cpp  PrototypeAR.h  PrototypeArmature.cpp  PrototypeArmature.h  PrototypeCameraSystem.cpp  PrototypeCameraSystem.h  PrototypeDatabase.cpp  PrototypeDatabase.h  PrototypeEngine.cpp  PrototypeEngine.h  PrototypeFrameBuffer.cpp  PrototypeFrameBuffer.h  PrototypeInput.cpp  PrototypeInput.h  PrototypeMaterial.cpp  PrototypeMaterial.h  PrototypeMeshBuffer.cpp  PrototypeMeshBuffer.h  PrototypePhysics.h  PrototypePipelines.cpp  PrototypePipelines.h  PrototypePluginInstance.cpp  PrototypePluginInstance.h  PrototypePreloadedAssets.cpp  PrototypePreloadedAssets.h  PrototypeProfiler.cpp  PrototypeProfiler.h  PrototypeRenderer.h  PrototypeScene.cpp  PrototypeScene.h  PrototypeSceneFilter.cpp  PrototypeSceneFilter.h  PrototypeSceneLayer.cpp  PrototypeSceneLayer.h  PrototypeSceneLoader.cpp  PrototypeSceneLoader.h  PrototypeSceneMasks.h  PrototypeSceneNode.cpp  PrototypeSceneNode.h  (+17 more)
PrototypeEngine/src/imgui/: IconsFontAwesome5Pro.h  helpers.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imguizmo.cpp  imguizmo.h  implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp
PrototypeEngine/src/opengl/: PrototypeOpenGL.cpp  PrototypeOpenGL.h  PrototypeOpenglRenderer.cpp  PrototypeOpenglRenderer.h  PrototypeOpenglUI.cpp  PrototypeOpenglUI.h  PrototypeOpenglUiSceneView.cpp  PrototypeOpenglUiSceneView.h  PrototypeOpenglWindow.cpp  PrototypeOpenglWindow.h
PrototypeEngine/src/opengl/gl4/: gl.c  gl.h  khrplatform.h
PrototypeEngine/src/physx/: PrototypePhysxPhysics.cpp  PrototypePhysxPhysics.h
PrototypeEngine/src/vulkan/: PrototypeVulkan.h  PrototypeVulkanRenderer.cpp  PrototypeVulkanRenderer.h  PrototypeVulkanUI.cpp  PrototypeVulkanUI.h  PrototypeVulkanUiSceneView.cpp  PrototypeVulkanUiSceneView.h  PrototypeVulkanWindow.cpp  PrototypeVulkanWindow.h
PrototypeEngine/templates/plugins/rust/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
PrototypeEngine/templates/plugins/rust/src/: lib.rs
PrototypeGenerator/cmake/windows/: CMakeLists.txt
PrototypeGenerator/src/: PrototypeGenerator.cpp
PrototypeInterface/cmake/windows/: CMakeLists.txt
PrototypeInterface/include/PrototypeInterface/: PrototypeInterface.h
PrototypeInterface/src/: PrototypeInterface.cpp
PrototypePlugins/: CMakeLists.txt
PrototypePlugins/Cpp/Cpp_Example_5_Controller/cmake/windows/: CMakeLists.txt
PrototypePlugins/Cpp/Cpp_Example_5_Controller/src/: lib.cpp
PrototypePlugins/Cpp/ExampleCpp/cmake/windows/: CMakeLists.txt
PrototypePlugins/Cpp/ExampleCpp/src/: lib.cpp
PrototypePlugins/Rust/Rust_Example_5_Controller/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
PrototypePlugins/Rust/Rust_Example_5_Controller/src/: lib.rs
PrototypeTraitSystem/: .gitignore
PrototypeTraitSystem/cmake/windows/: CMakeLists.txt
PrototypeTraitSystem/include/PrototypeTraitSystem/: Camera.h  Collider.h  MeshRenderer.h  PrototypeTraitSystem.h  PrototypeTraitSystemTypes.h  Rigidbody.h  Script.h  Transform.h  VehicleChasis.h
PrototypeTraitSystem/scripts/: generate.py  install.py
PrototypeTraitSystem/src/: Camera.cpp  Collider.cpp  MeshRenderer.cpp  PrototypeTraitSystem.cpp  Rigidbody.cpp  Script.cpp  Transform.cpp  VehicleChasis.cpp  main.cpp
PrototypeTraitSystem/templates/: PrototypeTraitSystem.cpp  PrototypeTraitSystem.h
PrototypeTranspiler/cmake/windows/: CMakeLists.txt
PrototypeTranspiler/src/: PrototypeTranspiler.cpp
cpdb/: compile_commands.json
(+19 files in other folders)
